To do web project - Project 2

--- a/page2.html
+++ b/page2.html
@@ -33,7 +33,7 @@
     </div>
 
     <div class="back">
-        <a href="page1.html">
+        <a href="index.html">
             <i class="fa fa-arrow-circle-left" style="font-size:27px;color:red"></i>
             <div id="back">Back</div>
         </a>
